<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_color"
    tools:context=".ui.activity.ResultActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/base_color"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/ib_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="4dp"
            android:src="@drawable/ic_back"
            android:contentDescription="@string/back_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:fontFamily="@font/lato_bold"
            android:text="@string/label_result"
            android:textColor="@color/primary_color"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/ib_back"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_color"
        app:layout_constraintTop_toBottomOf="@id/toolbar"/>

    <ImageView
        android:id="@+id/result_image"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_margin="32dp"
        android:contentDescription="@string/result_image"
        app:srcCompat="@drawable/ic_place_holder"
        app:layout_constraintTop_toBottomOf="@id/toolbar"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="16dp"
        app:contentPadding="16dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/card_background_color"
        app:layout_constraintTop_toBottomOf="@id/result_image">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/result_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_bold"
                android:text="@string/result"
                android:textColor="@color/primary_color"
                android:textSize="16sp"
                android:textAlignment="center"
                app:layout_constraintTop_toTopOf="parent"/>

            <View
                android:id="@+id/view_line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/primary_color"
                app:layout_constraintTop_toBottomOf="@id/result_text"/>

            <TextView
                android:id="@+id/classification_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/lato_bold"
                android:text="@string/classification"
                android:textColor="@color/primary_color"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/view_line"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/classification_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/lato_regular"
                android:textColor="@color/primary_color"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/view_line"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="Cancer"/>

            <TextView
                android:id="@+id/confidence_score_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/lato_bold"
                android:text="@string/confidence_score"
                android:textColor="@color/primary_color"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/classification_text"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/confidence_score_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/lato_regular"
                android:textColor="@color/primary_color"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/classification_result"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="80%"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/lato_bold"
                android:text="@string/date_check"
                android:textColor="@color/primary_color"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/confidence_score_text"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/date_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/lato_regular"
                android:textColor="@color/primary_color"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/confidence_score_result"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="2 November, 2024"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/save_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_blue"
        android:fontFamily="@font/lato_bold"
        android:text="@string/save_check_result"
        android:textAllCaps="false"
        android:textColor="@color/text_button_color"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/cv_result"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>