<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/base_color">

    <ImageView
        android:id="@+id/iv_cover"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_margin="16dp"
        android:contentDescription="@string/result_image"
        app:srcCompat="@drawable/ic_place_holder"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_result_text"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/tv_result_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/result_text"
        android:textSize="14sp"
        android:textColor="@color/primary_color"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_cover"
        app:layout_constraintEnd_toStartOf="@id/tv_result" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/lato_regular"
        android:textSize="14sp"
        android:textColor="@color/primary_color"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_result_text"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Cancer"/>

    <TextView
        android:id="@+id/tv_score_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="4dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/confidence_score_text"
        android:textSize="14sp"
        android:textColor="@color/primary_color"
        app:layout_constraintTop_toBottomOf="@id/tv_result_text"
        app:layout_constraintStart_toEndOf="@id/iv_cover"
        app:layout_constraintEnd_toStartOf="@id/tv_score" />

    <TextView
        android:id="@+id/tv_score"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/lato_regular"
        android:textSize="14sp"
        android:textColor="@color/primary_color"
        app:layout_constraintTop_toBottomOf="@id/tv_result"
        app:layout_constraintStart_toEndOf="@id/tv_score_text"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="80 %"/>

    <TextView
        android:id="@+id/tv_date_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/checked_on_text"
        android:textSize="14sp"
        android:textColor="@color/primary_color"
        app:layout_constraintTop_toBottomOf="@id/tv_score_text"
        app:layout_constraintStart_toEndOf="@id/iv_cover"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginHorizontal="16dp"
        android:fontFamily="@font/lato_regular"
        android:textSize="14sp"
        android:textColor="@color/primary_color"
        app:layout_constraintTop_toBottomOf="@id/tv_date_text"
        app:layout_constraintStart_toEndOf="@id/iv_cover"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="02 November 2024"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_color"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>